--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <a href="ListAllMembers" class="button">List all members</a>
+        <a href="MemberLogin.jsp" class="button">Member login</a>
     </body>
 </html>
