Members can now register. Members can submit claims

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,11 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <a href="MemberLogin.jsp" class="button">Member login</a>
+        <div align="center">
+            <h1>Welcome to XYZ</h1>
+            <a href="Register.jsp" class="button"><h2>Register</h2></a>
+            <br>
+            <a href="MemberLogin.jsp" class="button"><h2>Login</h2></a>
+        </div>
     </body>
 </html>
