--- a/web/index.html
+++ b/web/index.html
@@ -6,16 +6,31 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Welcome</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/main.css">
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     </head>
+
     <body>
+        <nav>
+            <div class="nav-wrapper teal">
+                <a href="#" class="brand-logo center">XYZ Assoc.</a>
+                <ul id="nav-mobile" class="left hide-on-med-and-down">
+                    
+                </ul>
+            </div>
+        </nav>
         <div align="center">
-            <h1>Welcome to XYZ</h1>
-            <a href="Register.jsp" class="button"><h2>Register</h2></a>
+            <h3>Welcome to XYZ</h3>
+            <a href="Register.jsp" class="button"><h4>Register</h4></a>
             <br>
-            <a href="MemberLogin.jsp" class="button"><h2>Login</h2></a>
+            <a href="MemberLogin.jsp" class="button"><h4>Login</h4></a>
         </div>
     </body>
 </html>
