--- a/web/index.html
+++ b/web/index.html
@@ -22,15 +22,20 @@ and open the template in the editor.
             <div class="nav-wrapper teal">
                 <a href="#" class="brand-logo center">XYZ Assoc.</a>
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
-                    
+
                 </ul>
             </div>
         </nav>
-        <div align="center">
-            <h3>Welcome to XYZ</h3>
-            <a href="Register.jsp" class="button"><h4>Register</h4></a>
-            <br>
-            <a href="MemberLogin.jsp" class="button"><h4>Login</h4></a>
+        <div class="container">
+            <div>
+                <h4>Welcome to XYZ</h4>
+                <br>
+                <br>
+                <a href="Register.jsp" class="waves-effect waves-light btn-large"><i class="material-icons right">person_add</i>Register</a>
+                <br>
+                <br>
+                <a href="MemberLogin.jsp" class="waves-effect waves-light btn-large"><i class="material-icons right">account_circle</i>Log in</a>
+            </div>
         </div>
     </body>
 </html>
